tests/agl/rejections/type/parse_json_named_arg.agl
let j = parse_json("42", foo: "bar")
